# rust-assembly-measure

./: .gitignore  ALGORITHM_VERIFICATION.md  BINSEC_INTEGRATION_DOCUMENTATION.md  BINSEC_INTEGRATION_SUMMARY.md  BINSEC_SETUP.md  BUILD_MODES.md  Benchmarking_Setup_Guide.md  Cargo.toml  DESIGN_FLOW.md  DUDECT_INTEGRATION.md  DUDECT_VALIDATION.md  DYNAMIC_BATCH_CALIBRATION.md  DYNAMIC_VS_LEGACY_COMPARISON.md  ENHANCED_BENCHMARKING_METHODOLOGY.md  Field_Element_Representations_and_OpenSSL_Analysis.md  IMPLEMENTATION_COMPLETE.md  INVESTIGATION_SUMMARY.md  LEGACY_VS_ENHANCED.md  OpenSSL_x25519_Integration_Instructions.md  README.md  Readme.md  STATISTICS_DOCUMENTATION.md  binsec_harness_generator.rs  binsec_integration.rs  binsec_integration_new.rs  build.rs  cleanup_binsec_artifacts.sh  cryptopt-vs-openssl-x25519-performance-analysis.md  dudect_integration.rs  final_3_paths_analysis.md  move_irqs_off_core.sh  restore_system_defaults.sh  run_all_benchmarks.sh  run_benchmark_pinned.sh  run_methodology_comparison.sh  run_with_dudect.sh  rust_fiat_curve25519_carry_mul_CryptOpt_ret.S  setup_benchmark_environment.sh  setup_binsec.sh  test_cryptopt_validation.sh  (+3 more)
.cargo/: config.toml
dudect-validation/: README.md  generate_test_harness.py
dudect-validation/src/: test_harness_template.c
examples/: load_and_call.rs
output-cryptopt-original/: curve25519_carry_mul.out
src/: asm-cleaner2.py  cryptopt_timing.rs  curve_spec.rs  dynamic_cli.rs  dynload.rs  ffi.rs  lib.rs  main.rs  measure_dyn.rs  measurement.rs  precise_timing.rs  runtime_build.rs
tests/: dso_symbols.rs
(+301 files in other folders)
